# django-ridwanraharja-portfolio

./: .gitignore  pyproject.toml  requirements.txt
authentication/: serializers.py  urls.py  views.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
experience/: models.py  serializers.py  urls.py  views.py
experience/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
portfolio/: models.py  serializers.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
