[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ridwanraharja",email = "9612621ridwan@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "django (==5.2.4)",
    "djangorestframework (==3.16.0)",
    "djangorestframework-simplejwt (==5.5.0)",
    "django-cors-headers (==4.7.0)",
    "psycopg2-binary (==2.9.10)",
    "drf-spectacular (==0.28.0)",
    "drf-spectacular-sidecar (==2025.7.1)",
    "pillow (==11.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
